--- a/index.html
+++ b/index.html
@@ -8,7 +8,30 @@
 </head>
 <body>
     <header>
-
+        <div id="images">
+            <img src="images/menu.png" alt="" id="menu">
+            <img src="images/logo-copasa.png" alt="" id="logo">
+        </div>
+        <div id="pesquisa">
+            <input type="search" placeholder="Pesquise" id="search">
+        </div >
+        
+        <nav>
+            <a href="#">115 - 0800 0300 115 |</a>
+            <a href="#">Ouvidoria |</a>
+            <a href="#">Denúncias |</a>
+            <a href="#">Relacionamento |</a>
+            <a href="#">Investidores |</a>
+            <a href="#">Empreendedor |</a>
+            <a href="#">LGPD |</a>
+            <a href="#">Compliance |</a>
+            <a href="#">Alienação de bens |</a>
+            <a href="#">Licitações e Contratos |</a>
+            <a href="#">Imprensa |</a>
+            <a href="#">Escolas |</a>
+            <a href="#">Reviva Pampulha |</a>
+            <a href="#">Informe Rendimentos</a>
+        </nav>
     </header>
 </body>
 </html>
