Fazendo o banner da página

--- a/index.html
+++ b/index.html
@@ -33,5 +33,21 @@
             <a href="#">Informe Rendimentos</a>
         </nav>
     </header>
+
+    <section id="banner">
+        <div id="conta_nova" class="Banner">
+            <p id="texto_conta">Nova Conta Oficial da Copasa.</p>
+            <p id="texto_conta2">Ela mudou para ficar mais fácil para você.</p>
+        </div>
+
+        <div class="Banner">
+            <img src="images/img_banner.png" alt="" id="img_banner">
+        </div>
+
+        <div class="Banner">
+            <img src="images/logo_banner.png" alt="" id="logo_banner">
+        </div>
+
+    </section>
 </body>
 </html>
