Clonando a section "agência virtual"

--- a/index.html
+++ b/index.html
@@ -47,7 +47,50 @@
         <div class="Banner">
             <img src="images/logo_banner.png" alt="" id="logo_banner">
         </div>
+    </section>
+    
+    <section id="agenciaVirtual">
+        <div id="titulo" style="border: solid 1px black;">
+            <p id="title" >Agência Virtual</p>
+        </div>
 
+        <div class="blocos">
+            <p class="text">Ligação Água/Esgoto</p>
+        </div>
+        <div class="blocos">
+            <p class="text">Parcelamentos</p>
+        </div>
+        <div class="blocos">
+            <p class="text">Religação de Água</p>
+        </div>
+        <div class="blocos">
+            <p class="text">Conta no E-mail</p>
+        </div>
+        <div class="blocos">
+            <p class="text">Vazamento</p>
+        </div>
+        <div class="blocos">
+            <p class="text">Tarifas e Preços</p>
+        </div>
+        <div class="blocos">
+            <p class="text">Débito automatico</p>
+        </div>
+        <div class="blocos">
+            <p class="text">Informar Leitura</p>
+        </div>
+        <div class="blocos">
+            <p class="text">Histórico de consumo</p>
+        </div>
+        <div class="blocos">
+            <p class="text">Segunda Via</p>
+        </div>
+        <div class="blocos">
+            <p class="text">Estou sem Água</p>
+        </div>
+        <div class="blocos">
+            <p class="text">Autodenúncia</p>
+        </div>
+    
     </section>
 </body>
 </html>
