--- a/index.html
+++ b/index.html
@@ -55,40 +55,40 @@
         </div>
         <div id="bloco">
             <div class="blocos">
-                <p class="text">Ligação Água/Esgoto</p>
+                <img src="images/Água e esgoto.png" alt="" class="imagem" id="aguaEsgoto">
             </div>
             <div class="blocos">
-                <p class="text">Parcelamentos</p>
+                <img src="images/Parcelamento.png" alt="" class="imagem" id="parcela">
             </div>
             <div class="blocos">
-                <p class="text">Religação de Água</p>
+                <img src="images/Religação de água.png" alt="" class="imagem" id="religacao">
             </div>
             <div class="blocos">
-                <p class="text">Conta no E-mail</p>
+                <img src="images/Conta no e-mail.png" alt="" class="imagem" id="email">
             </div>
             <div class="blocos">
-                <p class="text">Vazamento</p>
+                <img src="images/Vazamento.png" alt="" class="imagem" id="vazamento">
             </div>
             <div class="blocos">
-                <p class="text">Tarifas e Preços</p>
+                <img src="images/Tarifas e preços.png" alt="" class="imagem" id="tarifa">
             </div>
             <div class="blocos">
-                <p class="text">Débito automatico</p>
+                <img src="images/Débito automático.png" alt="" class="imagem" id="debito">
             </div>
             <div class="blocos">
-                <p class="text">Informar Leitura</p>
+                <img src="images/Informar leitura.png" alt="" class="imagem" id="leitura">
             </div>
             <div class="blocos">
-                <p class="text">Histórico de consumo</p>
+                <img src="images/Histórico de consumo.png" alt="" class="imagem" id="historico">
             </div>
             <div class="blocos">
-                <p class="text">Segunda Via</p>
+                <img src="images/Segunda via.png" alt="" class="imagem" id="segundavia">
             </div>
             <div class="blocos">
-                <p class="text">Estou sem Água</p>
+                <img src="images/Estou sem água.png" class="imagem" id="estousemagua">
             </div>
             <div class="blocos">
-                <p class="text">Autodenúncia</p>
+                <img src="images/Autodenúncia.png" alt="" class="imagem" id="autodenuncia">
             </div>
         </div>
     </section>
