--- a/index.html
+++ b/index.html
@@ -90,7 +90,13 @@
             <div class="blocos">
                 <img src="images/Autodenúncia.png" alt="" class="imagem" id="autodenuncia">
             </div>
+
+            <a href="#" id="maiservicos">Mais serviços ></a>
         </div>
+    </section>
+
+    <section id="ultimasnoticias">
+        
     </section>
 </body>
 </html>
