Início da section últimas notícias

--- a/index.html
+++ b/index.html
@@ -96,7 +96,11 @@
     </section>
 
     <section id="ultimasnoticias">
-        
+        <p id="news">Últimas Notícias</p>
+        <div id="imgnoticia">
+            <img src="images/copasainaugura.png" alt="" id="noticiaimg">
+        </div>
     </section>
+    <p>teste</p>
 </body>
 </html>
