--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
     <section id="ultimasnoticias">
         <p id="news">Últimas Notícias</p>
         <div id="imgnoticia">
-            <img src="images/copasainaugura.png" alt="" id="noticiaimg">
+            
+            <a href="#" id="data">15/10/2024</a>
+            <a href="#" id="copasaInaugura">Copasa inaugura Terrário de Resíduos na sua sede em BH</a>
         </div>
     </section>
     <p>teste</p>
