Inclusão de algumas imagens

--- a/index.html
+++ b/index.html
@@ -101,11 +101,26 @@
             <a href="#" id="data">15/10/2024</a>
             <a href="#" id="copasaInauguracao">Copasa inaugura Terrário de Resíduos na sua sede em BH</a>
         </div>
-        <div class="noticia" id="noticiasDireita">
-
+        <div class="noticia" id="noticiasDireita" class="imgsnews">
+            <div id="comunidadesrurais" class="imgsnews">
+                <img src="images/Comunidades rurais.png" alt="" class="imgnoticia">
+                <a href="#" class="texto" class="data">06/11/2024</a>
+                <a href="#" class="texto">Comunidades rurais de São João do Paraíso comemoram chegada da água tratada</a>
+            </div>
+            <hr>
+            <div id="obras" class="imgsnews">
+                <img src="images/Obras.png" alt="" class="imgnoticia">
+                <a href="#" class="texto" class="data">06/11/2024</a>
+                <a href="#" class="texto">Obras de R$ 53 milhões prepararam região Leste para enfrentar estiagem histórica</a>
+            </div>
+            <hr>
+            <div id="investimentos" class="imgsnews">
+                <img src="images/Investimentos.png" alt="" class="imgnoticia">
+                <a href="#" class="texto" class="data">05/11/2024</a>
+                <a href="#" class="texto">Investimentos da Copasa chegam a R$ 1,56 bi e batem recorde histórico</a>
+            </div>
         </div>
 
-        
     </section>
     <p>teste</p>
 </body>
