--- a/index.html
+++ b/index.html
@@ -101,26 +101,47 @@
             <a href="#" id="data">15/10/2024</a>
             <a href="#" id="copasaInauguracao">Copasa inaugura Terrário de Resíduos na sua sede em BH</a>
         </div>
+
         <div class="noticia" id="noticiasDireita" class="imgsnews">
             <div id="comunidadesrurais" class="imgsnews">
                 <img src="images/Comunidades rurais.png" alt="" class="imgnoticia">
-                <a href="#" class="texto" class="data">06/11/2024</a>
+                <a href="#" class="datas">06/11/2024</a>
                 <a href="#" class="texto">Comunidades rurais de São João do Paraíso comemoram chegada da água tratada</a>
             </div>
             <hr>
             <div id="obras" class="imgsnews">
                 <img src="images/Obras.png" alt="" class="imgnoticia">
-                <a href="#" class="texto" class="data">06/11/2024</a>
+                <a href="#" class="datas">06/11/2024</a>
                 <a href="#" class="texto">Obras de R$ 53 milhões prepararam região Leste para enfrentar estiagem histórica</a>
             </div>
             <hr>
             <div id="investimentos" class="imgsnews">
                 <img src="images/Investimentos.png" alt="" class="imgnoticia">
-                <a href="#" class="texto" class="data">05/11/2024</a>
+                <a href="#" class="datas">05/11/2024</a>
                 <a href="#" class="texto">Investimentos da Copasa chegam a R$ 1,56 bi e batem recorde histórico</a>
-            </div>
+            </div>           
         </div>
 
+        <a href="#" id="saibamais">Saiba mais ></a>
+    </section>
+    
+    <section id="copasatransparente">
+        <p id="Cop_Transparente">Copasa Transparente</p>
+        <p id="clique">Clique em um dos botões abaixo para saber mais sobre os respectivos assuntos.</p>
+
+        <div id="copasaBlocos">
+            <div id="reservatorios" class="copasa_bloco">
+                <a href="#"><img src="images/Níveis dos reservatório.jpg" class="imgblocos"></a>
+            </div>
+
+            <div id="consumo" class="copasa_bloco">
+                <a href="#"><img src="images/consumo-consciente.png" class="imgblocos"></a>
+            </div>
+
+            <div id="abastecimento" class="copasa_bloco">
+                <a href="#"><img src="images/abastecimento.jpg" class="imgblocos"></a>
+            </div>
+        </div>
     </section>
     <p>teste</p>
 </body>
