Alterações nos blocos da Copasa Transparente

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <img src="images/Investimentos.png" alt="" class="imgnoticia">
                 <a href="#" class="datas">05/11/2024</a>
                 <a href="#" class="texto">Investimentos da Copasa chegam a R$ 1,56 bi e batem recorde histórico</a>
-            </div>           
+            </div>
         </div>
 
         <a href="#" id="saibamais">Saiba mais ></a>
@@ -130,19 +130,32 @@
         <p id="clique">Clique em um dos botões abaixo para saber mais sobre os respectivos assuntos.</p>
 
         <div id="copasaBlocos">
-            <div id="reservatorios" class="copasa_bloco">
-                <a href="#"><img src="images/Níveis dos reservatório.jpg" class="imgblocos"></a>
-            </div>
+            <a href="#"><div class="copasaTitles">Níveis dos reservatórios</div></a>
 
+            <a href="#"><div class="copasaTitles">Consumo consciente</div></a>
+
+            <a href="#"><div class="copasaTitles">Sobre o abastecimento</div>
+
+            </a>
+<!--
+                <div id="reservatorios" class="copasa_bloco">
+                    <a href="#" class="copasaTitles">Níveis dos reservatórios</a>
+                    <a href="#"><img src="images/Níveis dos reservatório.jpg" class="imgblocos"></a>
+                </div>
+            
             <div id="consumo" class="copasa_bloco">
+                <a href="#" class="copasaTitles">Consumo consciente</a>
                 <a href="#"><img src="images/consumo-consciente.png" class="imgblocos"></a>
             </div>
 
             <div id="abastecimento" class="copasa_bloco">
+                <a href="#" class="copasaTitles">Sobre o abastecimento</a>
                 <a href="#"><img src="images/abastecimento.jpg" class="imgblocos"></a>
             </div>
+            -->
         </div>
     </section>
+
     <p>teste</p>
 </body>
 </html>
