Mudança de raciocínio

--- a/index.html
+++ b/index.html
@@ -130,15 +130,15 @@
         <p id="clique">Clique em um dos botões abaixo para saber mais sobre os respectivos assuntos.</p>
 
         <div id="copasaBlocos">
-            <a href="#"><div class="copasaTitles">Níveis dos reservatórios</div></a>
-
-            <a href="#"><div class="copasaTitles">Consumo consciente</div></a>
+            < href="#"><div class="copasaTitles" id="reservatorios">Níveis dos reservatórios</div></a>
+            <!--<a href="#"><div id="reservatorios" class="copasa_bloco"></div></a>
+            <!--<a href="#"><div class="copasaTitles">Consumo consciente</div></a>
 
             <a href="#"><div class="copasaTitles">Sobre o abastecimento</div>
 
             </a>
 <!--
-                <div id="reservatorios" class="copasa_bloco">
+                
                     <a href="#" class="copasaTitles">Níveis dos reservatórios</a>
                     <a href="#"><img src="images/Níveis dos reservatório.jpg" class="imgblocos"></a>
                 </div>
